# routing-processor

./: .env.example  Cargo.toml  Readme.md
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs  prelude.rs
core/src/model/: mod.rs  processor.rs  transfer.rs  transfer_config.rs
core/src/port/: repository.rs  service.rs
core/src/repository/: mod.rs  processor.rs  transfer_config.rs
core/src/repository/processors/: mod.rs  snap_core_processor.rs  xb_core_processor.rs
core/src/service/: transfer.rs
core/src/utils/: connection.rs  database.rs  envs.rs  mod.rs  test_container.rs
migrations/: 20241111131440_create_processors_table.down.sql  20241111131440_create_processors_table.up.sql  20241117154526_create_transafer_config_table.down.sql  20241117154526_create_transafer_config_table.up.sql
seeder/: Cargo.toml
seeder/src/: main.rs  prelude.rs  processor_seeder.rs  transfer_config_seeder.rs
web_api/: Cargo.toml
web_api/src/: main.rs  transfer.rs
