[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.38", features = ["serde"] }
serde = "1.0.215"
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono", "mysql"] }
tokio = { version = "1.41.1", features = ["full"] }
thiserror = "1"
anyhow = "1"

[dev-dependencies]
